--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,23 +9,25 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  PROJECT_PATH: 'SI/SI.Api/SI.Api.csproj'
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
+    - name: "Checkout"
     - uses: actions/checkout@v3
-    - name: Setup .NET
+    
+    - name: "Setup .NET"
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
         
-    - name: Restore dependencies
-      run: dotnet restore
+    - name: "Restore dependencies"
+      run: dotnet restore ${{ env.PROJECT_PATH }}
       
-    - name: Build
-      run: dotnet build --no-restore
-      
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: "Build project"
+      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
