--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,12 +22,12 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: "Setup .NET"
-      uses: actions/setup-dotnet@v3
+    - uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
         
     - name: "Restore dependencies"
-      run: dotnet restore ${{ env.PROJECT_PATH }}
+    - run: dotnet restore ${{ env.PROJECT_PATH }}
       
     - name: "Build project"
-      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
+    - run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
