--- a/SI/SI.TestPackage/SI.TestPackage.csproj
+++ b/SI/SI.TestPackage/SI.TestPackage.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Version>$(VersionPrefix)</Version>
-    <RepositoryUrl>https://github.com/School-improver/SI</RepositoryUrl>
+    <RepositoryUrl></RepositoryUrl>
     <Description>Test description</Description>
   </PropertyGroup>
 
